# textlinebreaker

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  RELEASE_NOTEs.md  pyproject.toml  setup.py  textlinebreaker.py
.github/workflows/: publish-pypi.yml  release.yml
.github/workflows/archive/: publish-pypi.yml  publish-testpypi.yml
textlinebreaker/: __init__.py  textlinebreaker.py
