[build-system]
# Minimum versions ensure modern packaging features work
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textlinebreaker"

# Version is now dynamic, setuptools_scm will infer it from Git tags
dynamic = ["version"]

description = "A module to format strings with customizable line length and alignment. Fixes splitting issue (characters vs words) and adds input type detection (list or string)."

readme = "README.md"
license = { text = "MIT License" }

authors = [
    { name = "scalvaruso", email = "calvaruso.simone@gmail.com" },
]

requires-python = ">=3.9"
dependencies = []

keywords = [
    "alignment", "break", "center", "centre",
    "format", "left", "line", "right",
    "split", "string", "text", "words"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://pypi.org/project/textlinebreaker"
Repository = "https://github.com/scalvaruso/textlinebreaker"
Issues = "https://github.com/scalvaruso/textlinebreaker/issues"

[tool.setuptools_scm]
# How version numbers are generated
version_scheme = "post-release"
local_scheme = "node-and-date"
